--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ XAI_API_KEY=xai-xxxxxxxxxxxxxxxxxxxx
 # OpenRouter API — for Claude rewriting (via OpenRouter)
 # Get your key at https://openrouter.ai/keys
 OPENROUTER_API_KEY=sk-or-v1-xxxxxxxxxxxxxxxxxxxx
+
+# PostgreSQL Database (Supabase)
+# Get your connection string from Supabase Dashboard > Settings > Database
+DATABASE_URL=postgresql://postgres:[PASSWORD]@db.[PROJECT].supabase.co:5432/postgres
