--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "web": "cd web && npm run dev",
-    "web:build": "cd web && npm run build"
+    "web:build": "cd web && npm run build",
+    "db:init": "tsx src/db/schema.ts",
+    "db:migrate": "tsx src/db/migrate-json.ts"
   },
   "keywords": [],
   "author": "",
@@ -25,12 +27,14 @@
     "commander": "^14.0.2",
     "dotenv": "^17.2.3",
     "node-cron": "^4.2.1",
+    "pg": "^8.11.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node-cron": "^3.0.11",
+    "@types/pg": "^8.10.0",
     "vitest": "^4.0.18"
   }
 }
