--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,3 @@
 {
-  "buildCommand": "cd web && npm install && npm run build",
-  "outputDirectory": "web/.next",
-  "installCommand": "npm install && cd web && npm install",
-  "framework": "nextjs"
+  "installCommand": "npm install && cd .. && npm install"
 }
